# CrustScrapper

./: .gitignore  Cargo.toml  README.md  apuntes.txt  config.json  merger.py  students_22_23.csv  students_24.csv  students_complete.csv
src/: main.rs  parser.rs  student.rs
src/fetcher/: fallback.rs  fetcher.rs  mod.rs
src/generator/: codegen.rs  config.rs  mod.rs
