[package]
name = "crust_scrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
futures = "0.3.31"
reqwest = "0.12.23"
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
